# Climate-Pulse

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_composite_indexes.py
app/: __init__.py  cache.py  config.py  database.py  exceptions.py  features.py  logging_config.py  main.py  model.py  monitoring.py  telemetry.py  utils.py  validators.py
docker/: nginx.conf
docs/: ARCHITECTURE.md  DEPLOYMENT.md  ML_METHODOLOGY.md
pipelines/: retrain_dag.py
scripts/: evaluate.py  generate_diagram.py  load_test.py  retrain.py  seed_data.py
tests/: conftest.py  test_api.py  test_api_extended.py  test_cache.py  test_config.py  test_database.py  test_exceptions.py  test_features.py  test_logging_config.py  test_model.py  test_model_extended.py  test_monitoring.py  test_new_endpoints.py  test_retrain.py  test_telemetry.py  test_utils.py  test_validators.py
