[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "climate-pulse"
version = "1.0.0"
description = "Short-range climate pattern and extreme weather event prediction API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.10",
    "sqlalchemy>=2.0",
    "xgboost>=2.1",
    "lightgbm>=4.5",
    "scikit-learn>=1.6",
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.14",
    "joblib>=1.4",
]

[project.scripts]
climate-pulse = "app.main:app"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "N"]
ignore = ["E501", "N803", "N806"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "pipelines*"]
