[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "climate-pulse"
version = "1.2.0"
description = "Short-range climate pattern and extreme weather event prediction API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.10",
    "sqlalchemy>=2.0",
    "xgboost>=2.1",
    "lightgbm>=4.5",
    "scikit-learn>=1.6",
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.14",
    "joblib>=1.4",
]

[project.scripts]
climate-pulse = "app.main:app"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "N", "B", "C4"]
ignore = ["E501", "N803", "N806", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = false
no_error_summary = true

[tool.bandit]
targets = ["app", "pipelines"]
skips = ["B101", "B601"]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "scripts/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "pipelines*"]
